--- a/netbox_config_diff/templates/netbox_config_diff/platformsetting.html
+++ b/netbox_config_diff/templates/netbox_config_diff/platformsetting.html
@@ -7,9 +7,7 @@
   <div class="row mb-3">
     <div class="col col-md-6">
       <div class="card">
-
-        <h5 class="card-header">Platform Setting</h5>
-
+        <h5 class="card-header">{{ object|meta:"verbose_name"|bettertitle }}</h5>
         <div class="card-body">
           <table class="table table-hover attr-table">
             <tr>
