--- a/netbox_config_diff/templates/netbox_config_diff/configcompliance.html
+++ b/netbox_config_diff/templates/netbox_config_diff/configcompliance.html
@@ -44,9 +44,18 @@
 {% endblock content %}
 
 {% block javascript %}
-  <link rel="stylesheet" href="{% static 'netbox_config_diff/diff2html.min.css' %}" />
   <script type="text/javascript" src="{% static 'netbox_config_diff/diff2html-ui.min.js' %}"></script>
   <script type="text/javascript">
+    var link = document.createElement('link');
+    link.type = 'text/css';
+    link.rel = 'stylesheet';
+    const colorMode = localStorage.getItem("netbox-color-mode");
+    if (colorMode === 'dark') {
+      link.href = `{% static 'netbox_config_diff/diff2html.dark.min.css' %}`
+    } else {
+      link.href = `{% static 'netbox_config_diff/diff2html.min.css' %}`
+    };
+    document.head.appendChild(link);
     document.addEventListener('DOMContentLoaded', () => {
       var configuration = {
           drawFileList: false,
@@ -58,13 +67,15 @@
           synchronisedScroll: true,
           highlight: true,
           renderNothingWhenEmpty: false,
+          stickyFileHeaders: false,
+          drawFileList: false,
       };
       const jsonDiff = `{{ object.diff|safe }}`;
       var targetElement = document.getElementById('diffElement');
       var diff2htmlUi = new Diff2HtmlUI(targetElement, jsonDiff, configuration);
       diff2htmlUi.draw();
+      document.querySelector(".d2h-file-header").remove();
       diff2htmlUi.highlightCode();
     });
   </script>
 {% endblock javascript %}
-
