Add escapejs filter to diff template

--- a/netbox_config_diff/templates/netbox_config_diff/configcompliance/data.html
+++ b/netbox_config_diff/templates/netbox_config_diff/configcompliance/data.html
@@ -70,7 +70,7 @@
           stickyFileHeaders: false,
           drawFileList: false,
       };
-      const jsonDiff = `{{ instance.diff|safe }}`;
+      const jsonDiff = `{{ instance.diff|escapejs|safe }}`;
       var targetElement = document.getElementById('diffElement');
       var diff2htmlUi = new Diff2HtmlUI(targetElement, jsonDiff, configuration);
       diff2htmlUi.draw();
