--- a/netbox_config_diff/templates/netbox_config_diff/configurationrequest.html
+++ b/netbox_config_diff/templates/netbox_config_diff/configurationrequest.html
@@ -60,15 +60,15 @@
             </tr>
             <tr>
               <th scope="row">Scheduled</th>
-              <td>{{ object.scheduled|annotated_date|placeholder }}</td>
+              <td>{{ object.scheduled|placeholder }}</td>
             </tr>
             <tr>
               <th scope="row">Started</th>
-              <td>{{ object.started|annotated_date|placeholder }}</td>
+              <td>{{ object.started|placeholder }}</td>
             </tr>
             <tr>
               <th scope="row">Completed</th>
-              <td>{{ object.completed|annotated_date|placeholder }}</td>
+              <td>{{ object.completed|placeholder }}</td>
             </tr>
           </table>
         </div>
