--- a/netbox_config_diff/templates/netbox_config_diff/configcompliance/missing_extra.html
+++ b/netbox_config_diff/templates/netbox_config_diff/configcompliance/missing_extra.html
@@ -1,6 +1,6 @@
 {% extends "netbox_config_diff/configcompliance.html" %}
 
-{% block title %}{{ object }} - Missing/Extra{% endblock %}
+{% block title %}{{ object }} - {{ header }}{% endblock %}
 
 {% block content %}
   <div class="row">
