--- a/netbox_config_diff/templates/netbox_config_diff/configurationrequest/diffs.html
+++ b/netbox_config_diff/templates/netbox_config_diff/configurationrequest/diffs.html
@@ -8,7 +8,7 @@
       <div class="col col-md-6">
         <div class="card">
           <h5 class="card-header">Job</h5>
-          <div class="card-body">
+          {% if version|first == "3" %}<div class="card-body">{% endif %}
             <table class="table table-hover attr-table">
               <tr>
                 <th scope="row">Name</th>
@@ -25,13 +25,13 @@
                 <td>{{ job.user|placeholder }}</td>
               </tr>
             </table>
-          </div>
+          {% if version|first == "3" %}</div>{% endif %}
         </div>
       </div>
       <div class="col col-md-6">
         <div class="card">
           <h5 class="card-header">Time</h5>
-          <div class="card-body">
+          {% if version|first == "3" %}<div class="card-body">{% endif %}
             <table class="table table-hover attr-table">
               <tr>
                 <th scope="row">Created</th>
@@ -46,7 +46,7 @@
                 <td>{{ job.completed|placeholder }}</td>
               </tr>
             </table>
-          </div>
+          {% if version|first == "3" %}</div>{% endif %}
         </div>
       </div>
     </div>
