--- a/netbox_config_diff/templates/netbox_config_diff/platformsetting.html
+++ b/netbox_config_diff/templates/netbox_config_diff/platformsetting.html
@@ -7,7 +7,7 @@
     <div class="col col-md-6">
       <div class="card">
         <h5 class="card-header">{{ object|meta:"verbose_name"|bettertitle }}</h5>
-        <div class="card-body">
+        {% if version|first == "3" %}<div class="card-body">{% endif %}
           <table class="table table-hover attr-table">
             <tr>
               <th scope="row">Platform</th>
@@ -36,7 +36,7 @@
               </td>
             </tr>
           </table>
-        </div>
+        {% if version|first == "3" %}</div>{% endif %}
       </div>
       {% include "inc/panels/custom_fields.html" %}
     </div>
