--- a/netbox_config_diff/templates/netbox_config_diff/configurationrequest/diffs.html
+++ b/netbox_config_diff/templates/netbox_config_diff/configurationrequest/diffs.html
@@ -8,7 +8,7 @@
       <div class="col col-md-6">
         <div class="card">
           <h5 class="card-header">Job</h5>
-          <div class="card-body">
+          {% if version|first == "3" %}<div class="card-body">{% endif %}
             <table class="table table-hover attr-table">
               <tr>
                 <th scope="row">Name</th>
@@ -25,28 +25,28 @@
                 <td>{{ job.user|placeholder }}</td>
               </tr>
             </table>
-          </div>
+          {% if version|first == "3" %}</div>{% endif %}
         </div>
       </div>
       <div class="col col-md-6">
         <div class="card">
           <h5 class="card-header">Time</h5>
-          <div class="card-body">
+          {% if version|first == "3" %}<div class="card-body">{% endif %}
             <table class="table table-hover attr-table">
               <tr>
                 <th scope="row">Created</th>
-                <td>{{ job.created|annotated_date }}</td>
+                <td>{{ job.created }}</td>
               </tr>
               <tr>
                 <th scope="row">Started</th>
-                <td>{{ job.started|annotated_date|placeholder }}</td>
+                <td>{{ job.started|placeholder }}</td>
               </tr>
               <tr>
                 <th scope="row">Completed</th>
-                <td>{{ job.completed|annotated_date|placeholder }}</td>
+                <td>{{ job.completed|placeholder }}</td>
               </tr>
             </table>
-          </div>
+          {% if version|first == "3" %}</div>{% endif %}
         </div>
       </div>
     </div>
