Add support for NetBox 4.1

--- a/netbox_config_diff/templates/netbox_config_diff/configurationrequest/diffs.html
+++ b/netbox_config_diff/templates/netbox_config_diff/configurationrequest/diffs.html
@@ -77,8 +77,8 @@
       </div>
     {% endif %}
   {% else %}
-    <div class="alert alert-warning text-end" role="alert">
-      <div class="float-start"><i class="mdi mdi-alert"></i>There is no diffs, run collect diffs</div>
+    <div class="alert alert-warning" role="alert">
+      <i class="mdi mdi-alert"></i>There is no diffs, run collect diffs
     </div>
   {% endif %}
 {% endblock content %}
